# discord-mic-bot

./: README.md  discord-mic-bot  discord-mic-bot-uv.cmd  pyproject.toml  requirements.txt
dmb/: __init__.py  __main__.py  lumeter.py  model.py  view.py
documentation/: README.md
